// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render <GravatarImg /> with regular email should match snapshot 1`] = `
<img
  className="gravatar-img gravatar-image-small"
  src="https://www.gravatar.com/avatar/20c9c1b252b46ab49d6f7a4cee9c3e68?d=blank"
  srcSet="https://www.gravatar.com/avatar/20c9c1b252b46ab49d6f7a4cee9c3e68?d=blank"
/>
`;

exports[`render when highlighted should contain style for highligting component 1`] = `
<div
  className="avatar-base avatar-l avatar-hover"
>
  <GravatarImg
    hash="20c9c1b252b46ab49d6f7a4cee9c3e68"
    scale="l"
  />
  <Initials
    firstName=""
    lastName=""
  />
</div>
`;

exports[`render when large scale should contain style for large scale 1`] = `
<div
  className="avatar-base avatar-l"
>
  <GravatarImg
    hash="20c9c1b252b46ab49d6f7a4cee9c3e68"
    scale="l"
  />
  <Initials
    firstName=""
    lastName=""
  />
</div>
`;

exports[`render when medium scale should contain style for medium scale 1`] = `
<div
  className="avatar-base avatar-m"
>
  <GravatarImg
    hash="20c9c1b252b46ab49d6f7a4cee9c3e68"
    scale="m"
  />
  <Initials
    firstName=""
    lastName=""
  />
</div>
`;

exports[`render when small scale should contain style for small scale 1`] = `
<div
  className="avatar-base avatar-s"
>
  <GravatarImg
    hash="20c9c1b252b46ab49d6f7a4cee9c3e68"
    scale="s"
  />
  <Initials
    firstName=""
    lastName=""
  />
</div>
`;
